# basic_simd

./: CMakeLists.txt  README.md
example/: example.cpp
include/: basic_simd.hpp  simd.hpp
tests/: EntryPoint.cpp  Tests.cpp
